src/test/ui/issues/10000-19999/issue-18400.stderr
error[E0275]: overflow evaluating the requirement `_: Sized`
  --> $DIR/issue-18400.rs:24:7
   |
LL |     0.contains(bits);
   |       ^^^^^^^^
   |
   = help: consider adding a `#![recursion_limit="256"]` attribute to your crate (`issue_18400`)
   = note: required because of the requirements on the impl of `Set<&[_]>` for `{integer}`
   = note: 128 redundant requirements hidden
   = note: required because of the requirements on the impl of `Set<&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[_]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]>` for `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
